# async-task-manager

./: .gitignore  Dockerfile  PostmanCollection.json  README.md  docker-compose.yml  pyproject.toml
config/: celery.py  settings.py  urls.py
tasks/: admin.py  conftest.py  filters  models.py  serializers.py  tasks.py  urls.py  views.py
tasks/migrations/: 0001_initial.py
tasks/tests/: test_serializers.py  test_tasks.py  test_views.py
