[tool.poetry]
name = "async-task-manager"
version = "0.1.0"
description = ""
authors = ["dimaska <parshindi@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.3.1"
celery = "^5.4.0"
redis = "^5.2.1"
psycopg2-binary = "^2.9.10"
django-celery-results = "^2.5.1"
django-filter = "^24.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-django = "^4.9.0"
pytest-celery = "^1.1.3"
factory-boy = "^3.3.1"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.pytest.ini_options]
django_find_project = true
python_files = [
    "tests.py",
    "test_*.py"
]
DJANGO_SETTINGS_MODULE = "config.settings"
addopts = "--reuse-db --tb=short -q"
